[workspace]
members = [
	"client/cli",
	"client/consensus/aura",
	"client/consensus/common",
	"client/consensus/relay-chain",
	"client/network",
	"client/pov-recovery",
	"client/service",
	"client/relay-chain-interface",
	"client/relay-chain-inprocess-interface",
	"client/relay-chain-rpc-interface",
	"pallets/aura-ext",
	"pallets/collator-selection",
	"pallets/dmp-queue",
	"pallets/parachain-system",
	"pallets/parachain-system/proc-macro",
	"pallets/session-benchmarking",
	"pallets/xcm",
	"pallets/xcmp-queue",
	"parachain-template/node",
	"parachain-template/runtime",
	"primitives/core",
	"primitives/parachain-inherent",
	"primitives/timestamp",
	"primitives/utility",
	"polkadot-parachain/",
	"parachains/common",
	"parachains/pallets/parachain-info",
	"parachains/pallets/ping",
	"parachains/runtimes/testing/rococo-parachain",
	"parachains/runtimes/starters/shell",
	"parachains/runtimes/starters/seedling",
	"parachains/runtimes/assets/statemint",
	"parachains/runtimes/assets/statemine",
	"parachains/runtimes/assets/westmint",
	"parachains/runtimes/contracts/contracts-rococo",
	"parachains/runtimes/testing/penpal",
	"test/client",
	"test/relay-sproof-builder",
	"test/relay-validation-worker-provider",
	"test/runtime",
	"test/service",
]

[profile.release]
panic = "unwind"
opt-level = 3

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[patch."https://github.com/paritytech/substrate"]
node-template ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
frame-benchmarking ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
frame-support ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
frame-support-procedural ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
frame-support-procedural-tools ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
frame-support-procedural-tools-derive ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-arithmetic ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-debug-derive ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-std ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-core ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-core-hashing ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-externalities ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-storage ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-runtime-interface ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-runtime-interface-proc-macro ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-tracing ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-wasm-interface ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-io ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-keystore ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-state-machine ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-panic-handler ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-trie ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-runtime ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-application-crypto ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-api ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-api-proc-macro ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-version ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-core-hashing-proc-macro ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-version-proc-macro ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-test-primitives ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
substrate-test-runtime-client ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-block-builder ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-client-api ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
substrate-prometheus-endpoint ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-executor ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-executor-common ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-allocator ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-maybe-compressed-blob ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-sandbox ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-serializer ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-executor-wasmi ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-executor-wasmtime ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-runtime-test ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-tasks ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
substrate-wasm-builder ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-tracing ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-rpc-server ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-tracing-proc-macro ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-blockchain ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-consensus ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-inherents ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-database ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-rpc ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
substrate-test-runtime ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
beefy-merkle-tree ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
beefy-primitives ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
frame-system ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
frame-system-rpc-runtime-api ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-babe ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-authorship ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-authorship ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-session ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-timestamp ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-timestamp ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-session ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-staking ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-consensus-babe ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-consensus-slots ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-consensus-vrf ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
frame-election-provider-support ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
frame-election-provider-solution-type ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-npos-elections ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
substrate-test-utils ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
substrate-test-utils-derive ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-service ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-chain-spec ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-chain-spec-derive ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-network ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
fork-tree ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-consensus ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-utils ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-network-common ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-peerset ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-finality-grandpa ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-network-light ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-network-sync ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-telemetry ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-client-db ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-state-db ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-informant ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-transaction-pool-api ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-keystore ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-offchain ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-offchain ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-transaction-pool ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-transaction-pool ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
substrate-test-runtime-transaction-pool ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-rpc ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-rpc-api ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-sysinfo ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-block-builder ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-transaction-storage-proof ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-balances ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-transaction-payment ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-offences ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-staking ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-bags-list ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-staking-reward-curve ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-consensus-aura ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-keyring ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
substrate-test-client ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-runtime-interface-test-wasm ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
frame-benchmarking-cli ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-cli ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
node-template-runtime ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
frame-executive ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
frame-system-benchmarking ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
frame-try-runtime ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-aura ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-grandpa ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-randomness-collective-flip ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-sudo ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-template ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-transaction-payment-rpc-runtime-api ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-transaction-payment-rpc ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-basic-authorship ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-proposer-metrics ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-consensus-aura ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-consensus-slots ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-network-test ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-finality-grandpa ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-network-gossip ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
substrate-frame-rpc-system ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
try-runtime-cli ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
remote-externalities ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-elections-phragmen ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
substrate-build-script-utils ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
node-bench ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
node-primitives ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
node-runtime ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-alliance ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-collective ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-identity ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-asset-tx-payment ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-assets ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-authority-discovery ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-authority-discovery ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-bounties ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-treasury ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-child-bounties ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-contracts ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-contracts-primitives ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-contracts-proc-macro ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-utility ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-contracts-rpc-runtime-api ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-conviction-voting ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-scheduler ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-preimage ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-democracy ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-election-provider-multi-phase ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-election-provider-support-benchmarking ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-gilt ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-im-online ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-indices ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-lottery ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
frame-support-test ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
frame-support-test-pallet ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-membership ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-mmr ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-mmr-primitives ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-multisig ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-nomination-pools ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-nomination-pools-benchmarking ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-nomination-pools-runtime-api ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-offences-benchmarking ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-proxy ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-ranked-collective ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-recovery ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-referenda ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-remark ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-session-benchmarking ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-society ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-state-trie-migration ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
substrate-state-trie-migration-rpc ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-tips ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-transaction-storage ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-uniques ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-vesting ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-whitelist ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
node-testing ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
node-executor ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
node-cli ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
node-inspect ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
node-rpc ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-contracts-rpc ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-mmr-rpc ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-consensus-babe ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-consensus-epochs ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-consensus-babe-rpc ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-finality-grandpa-rpc ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-sync-state-rpc ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-authority-discovery ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-consensus-uncles ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-service-test ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
substrate-frame-cli ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
chain-spec-builder ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
subkey ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
beefy-gadget ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
beefy-gadget-rpc ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-consensus-manual-seal ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sc-consensus-pow ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-consensus-pow ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-atomic-swap ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-bags-list-fuzzer ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-bags-list-remote-tests ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-beefy ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-beefy-mmr ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
frame-election-solution-type-fuzzer ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-example-basic ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-example-offchain-worker ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-example-parallel ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-nicks ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-node-authorization ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-nomination-pools-test-staking ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-scored-pool ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
pallet-staking-reward-fn ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
frame-support-test-compile-pass ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-api-test ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-application-crypto-test ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-arithmetic-fuzzer ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-npos-elections-fuzzer ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-runtime-interface-test ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
sp-runtime-interface-test-wasm-deprecated ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
substrate-test-utils-test-crate ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
substrate-frame-rpc-support ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
generate-bags ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
node-runtime-generate-bags ={  git = "https://github.com/dzmitry-lahoda-forks/substrate", rev = "71bb4b21a0e131bedd2629df2ee11a30a186ab02" }
